--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -27,7 +27,7 @@ body {
   display: grid;
   grid-template-rows: repeat(15, 1fr); /*auto*/
   grid-template-columns: 1fr;
-  grid-gap: 1rem;
+  /*grid-gap: 1rem;*/
   grid-template-areas:
   "."
   "."
@@ -44,6 +44,21 @@ body {
   "."
   "."
   ".";
+}
+
+.app-header-bg {
+  grid-area: 1 / 1 / 3 / 6;
+  background: #007bff;
+}
+
+.app-header {
+  grid-area: 1 / 2 / 2 / 5;
+  background: orange;
+}
+
+.app-nav {
+  grid-area: 2 / 2 / 3 / 5;
+  background: lightgray;
 }
 
 @media screen and (min-width: 991px) {
@@ -69,18 +84,18 @@ body {
 @media screen and (min-width: 1399px) {
   .app-layout {
     grid-template-rows: repeat(10, 1fr); /*auto*/
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     grid-template-areas:
-    ". . ."
-    ". . ."
-    ". . ."
-    ". . ."
-    ". . ."
-    ". . ."
-    ". . ."
-    ". . ."
-    ". . ."
-    ". . .";
+    ". . . . ."
+    ". . . . ."
+    ". . . . ."
+    ". . . . ."
+    ". . . . ."
+    ". . . . ."
+    ". . . . ."
+    ". . . . ."
+    ". . . . ."
+    ". . . . .";
     padding: 0 1rem;
   }
 }
@@ -94,4 +109,3 @@ body {
     width: 1380px;
   }
 }
- 
