--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -61,6 +61,26 @@ body {
   background: lightgray;
 }
 
+.app-content {
+  grid-area: 3 / 2 / 8 / 5;
+  background: white;
+}
+
+.app-footer-bg {
+  grid-area: 8 / 1 / 11 / 6;
+  background: #6f42c1;
+}
+
+.app-pre-footer {
+  grid-area: 8 / 2 / 9 / 5;
+  background: lightgray;
+}
+
+.app-footer {
+  grid-area: 9 / 2 / 10 / 5;
+  background: orange;
+}
+
 @media screen and (min-width: 991px) {
   .app-layout {
     grid-template-rows: repeat(12, 1fr); /*auto*/
@@ -105,7 +125,7 @@ body {
     padding: 0;
   }
 
-  .app-layout {
-    width: 1380px;
-  }
+  /*.app-layout {*/
+  /*  width: 1380px;*/
+  /*}*/
 }
