--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -21,6 +21,11 @@ body {
   background-color: rgb(239, 239, 245);
 }
 
+.app-container {
+  width: 1380px;
+  height: 50px;
+}
+
 .app-layout {
   width: 100%;
   height: 100%;
@@ -46,6 +51,17 @@ body {
   ".";
 }
 
+.app-header {
+  grid-area: 1 / 1 / 2 / 6;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+.app-footer {
+  grid-area: 10 / 1 / 11/ 6;
+}
+
 @media screen and (min-width: 991px) {
   .app-layout {
     grid-template-rows: repeat(12, 1fr); /*auto*/
@@ -69,19 +85,19 @@ body {
 @media screen and (min-width: 1399px) {
   .app-layout {
     grid-template-rows: repeat(10, 1fr); /*auto*/
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     grid-template-areas:
-    ". . ."
-    ". . ."
-    ". . ."
-    ". . ."
-    ". . ."
-    ". . ."
-    ". . ."
-    ". . ."
-    ". . ."
-    ". . .";
-    padding: 0 1rem;
+    ". . . . ."
+    ". . . . ."
+    ". . . . ."
+    ". . . . ."
+    ". . . . ."
+    ". . . . ."
+    ". . . . ."
+    ". . . . ."
+    ". . . . ."
+    ". . . . .";
+    /* padding: 0 1rem; */
   }
 }
 
@@ -90,8 +106,8 @@ body {
     padding: 0;
   }
 
-  .app-layout {
+  /* .app-layout {
     width: 1380px;
-  }
+  } */
 }
  
