Added style to layout components

--- a/src/assets/styles/base/_variables.scss
+++ b/src/assets/styles/base/_variables.scss
@@ -25,6 +25,7 @@ $secondary-base: #48465b;
 $primary-background: #efeff5;
 $secondary-background: #f9f9fc;
 $tertiary-background: #edeefd;
+$quarternary-background: #e8e9fa;
 
 $primary-color: #4d5cf2;
 $secondary-color: #f93576;
@@ -32,6 +33,11 @@ $tertiary-color: #2c1b9b;
 $quaternary-color: #090a29;
 
 $primary-fade-color: rgba(0, 0, 0, 0.2);
+$secondary-fade-color: #42447f;
+$tertiary-fade-color: #191a43;
 
 $primary-border-color: #ebedf2;
 $secondary-border-color: #e7e8f4;
+
+$primary-shadow-color: rgba(0, 0, 0, 0.2);
+$secondary-shadow-color: rgba(82, 63, 105, 0.05);
