--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -11,8 +11,20 @@
 @import 'base/reset';
 
 //==============================================================================
+// Utilities
+//==============================================================================
+@import 'utilities/image-fluid';
+
+//==============================================================================
 // Components
 //==============================================================================
 @import 'components/layout';
 @import 'components/header';
+@import 'components/nav';
+@import 'components/sub-header';
+@import 'components/content';
+@import 'components/pre-footer';
 @import 'components/footer';
+@import 'components/form-quick-search';
+@import 'components/form-subscription';
+@import 'components/card';
