--- a/src/assets/styles/components/_header.scss
+++ b/src/assets/styles/components/_header.scss
@@ -1,82 +1,115 @@
-.app {
-  &-header-bg {
+.app-header {
+  &-bg {
     grid-area: 1 / 1 / 3 / -1;
     background-color: $tertiary-color;
   }
 
-  &-header {
-    grid-area: 1 / 1 / 2 / -1;
+  grid-area: 1 / 1 / 2 / -1;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 60px;
+  min-height: 60px;
+  position: relative;
+  padding: 0 1rem;
+  background-color: $primary-base;
+  box-shadow: 0 1px 9px -3px $primary-fade-color;
+
+  &__brand {
+    font-size: 1.5rem;
+    font-weight: 600;
+    color: $secondary-color;
+    text-decoration: none;
+    cursor: pointer;
+  }
+
+  &__toolbar {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-end;
     align-items: center;
-    height: 60px;
-    min-height: 60px;
-    position: relative;
+    width: 100%;
+    height: 50px;
+    min-height: 50px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
     padding: 0 1rem;
     background-color: $primary-base;
-    box-shadow: 0 1px 9px -3px $primary-fade-color;
+    border-top: 1px solid $primary-border-color;
+    border-bottom: 1px solid $primary-border-color;
 
-    &__brand {
-      font-size: 1.5rem;
-      font-weight: 600;
-      color: $secondary-color;
-      text-decoration: none;
-      cursor: pointer;
+    &-item {
+      margin: 0 0.25rem;
+
+      &:first-child {
+        flex-grow: 1;
+      }
     }
 
-    &__toolbar {
+    &-icon {
       display: flex;
-      justify-content: flex-end;
+      justify-content: flex-start;
       align-items: center;
-      width: 100%;
-      height: 50px;
-      min-height: 50px;
-      position: absolute;
-      top: 0;
-      left: 0;
-      z-index: -1;
-      padding: 0 1rem;
-      background-color: $primary-base;
-      border-top: 1px solid $primary-border-color;
-      border-bottom: 1px solid $primary-border-color;
+      width: 30px;
+      height: 30px;
+      border: 1px solid $secondary-border-color;
+      border-radius: 100%;
+    }
+  }
 
-      &-item {
-        margin: 0 0.25rem;
+  &__toolbar-control {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+  }
 
-        &:first-child {
-          flex-grow: 1;
+  @media (min-width: $breakpoint-medium) {
+    & {
+      grid-area: 1 / 2 / 2 / 4;
+      background: none;
+    }
+  }
+
+  @media (min-width: $breakpoint-medium + 1) {
+    & {
+      height: 160px;
+      background: none;
+      box-shadow: none;
+
+      &__toolbar {
+        position: static;
+        z-index: unset;
+        background: none;
+        border: none;
+
+        &-item {
+          margin: 0 0.5rem;
+
+          &:first-child {
+            flex-grow: unset;
+          }
+
+          &:last-child {
+            margin-right: 0;
+          }
+        }
+
+        &-icon {
+          width: 46px;
+          height: 46px;
         }
       }
 
-      &-icon {
-        display: flex;
-        justify-content: flex-start;
-        align-items: center;
-        width: 30px;
-        height: 30px;
-        border: 1px solid $secondary-border-color;
-        border-radius: 100%;
+      &__toolbar-control {
+        display: none;
       }
     }
+  }
 
-    &__toolbar-control {
-      display: flex;
-      justify-content: flex-end;
-      align-items: center;
-    }
-
-    @media (min-width: $breakpoint-small) {}
-
-    @media (min-width: $breakpoint-medium) {
-      .app-header {
-        grid-area: 1 / 2 / 2 / 4;
-      }
-    }
-
-    @media (min-width: $breakpoint-large) {
-      .app-header {
-        grid-area: 1 / 2 / 2 / 5;
-      }
+  @media (min-width: $breakpoint-large) {
+    & {
+      grid-area: 1 / 2 / 2 / 5;
     }
   }
 }
