--- a/src/assets/styles/components/_layout.scss
+++ b/src/assets/styles/components/_layout.scss
@@ -12,7 +12,7 @@
     width: 100%;
     height: 100%;
     display: grid;
-    grid-template-rows: repeat(15, 1fr); /*auto*/
+    grid-template-rows: repeat(15, auto);
     grid-template-columns: 1fr;
     grid-template-areas:
     "."
@@ -32,8 +32,8 @@
     ".";
 
     @media (min-width: $breakpoint-small) {
-      .app-layout {
-        grid-template-rows: repeat(12, 1fr); /*auto*/
+      & {
+        grid-template-rows: repeat(12, auto);
         grid-template-columns: 1fr 1fr;
         grid-template-areas:
         ". ."
@@ -52,8 +52,8 @@
     }
 
     @media (min-width: $breakpoint-medium) {
-      .app-layout {
-        grid-template-rows: repeat(13, 1fr); /*auto*/
+      & {
+        grid-template-rows: repeat(13, auto);
         grid-template-columns: 0.25fr 4fr 4fr 0.25fr;
         grid-template-areas:
         ". . . ."
@@ -73,8 +73,8 @@
     }
 
     @media (min-width: $breakpoint-large) {
-      .app-layout {
-        grid-template-rows: repeat(10, 1fr); /*auto*/
+      & {
+        grid-template-rows: repeat(10, auto);
         grid-template-columns: 1fr 5fr 5fr 5fr 1fr;
         grid-template-areas:
         ". . . . ."
