Updated layout style to fix background issue

--- a/src/assets/styles/base/_reset.scss
+++ b/src/assets/styles/base/_reset.scss
@@ -15,7 +15,7 @@ html {
 body {
   font: 400 1rem/1.5 $font-family-base;
   text-align: left;
-  background-color: $primary-background;
+  //background-color: $primary-background;
 }
 
 // Remove figure margin
