--- a/src/assets/styles/components/_layout.scss
+++ b/src/assets/styles/components/_layout.scss
@@ -2,7 +2,7 @@
   &-root {
     width: 100vw;
     max-width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     display: flex;
     justify-content: center;
     align-items: flex-start;
