--- a/src/assets/styles/components/_sub-header.scss
+++ b/src/assets/styles/components/_sub-header.scss
@@ -3,7 +3,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0.5rem 1rem 0 1rem;
+  padding: 0 1rem;
   background-color: $primary-background;
 
   &__info {
