--- a/src/assets/styles/components/_nav.scss
+++ b/src/assets/styles/components/_nav.scss
@@ -4,10 +4,43 @@
   background-color: $primary-base;
   display: none;
 
+  &__menu {
+    display: flex;
+    justify-content: flex-start;
+    align-items: stretch;
+    flex-wrap: wrap;
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+    font-size: 0.875rem;
+
+    &-item {
+      padding: 0 0.5rem;
+    }
+
+    a {
+      padding: 0.625rem;
+      color: $secondary-fade-color;
+      border-radius: 0.5rem;
+      text-decoration: none;
+    }
+  }
+
   @media (min-width: $breakpoint-medium) {
     & {
       width: 100%;
       grid-area: 2 / 2 / 3 / 4;
+    }
+  }
+
+  @media (min-width: $breakpoint-medium +1) {
+    & {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      height: 70px;
+      padding: 0 1rem;
+      border-radius: 0.5rem 0.5rem 0 0;
     }
   }
 
