Added fontawesome icons to projects

--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -16,6 +16,13 @@
 @import 'utilities/image-fluid';
 
 //==============================================================================
+// Vendor
+//==============================================================================
+@import 'vendor/fontawesome';
+@import 'vendor/solid';
+@import 'vendor/brands';
+
+//==============================================================================
 // Components
 //==============================================================================
 @import 'components/layout';
