--- a/src/assets/styles/components/_header.scss
+++ b/src/assets/styles/components/_header.scss
@@ -49,12 +49,13 @@
 
     &-icon {
       display: flex;
-      justify-content: flex-start;
+      justify-content: center;
       align-items: center;
       width: 30px;
       height: 30px;
       border: 1px solid $secondary-border-color;
       border-radius: 100%;
+      color: $primary-base;
     }
   }
 
