Update responsive styles for layout

--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -35,3 +35,4 @@
 @import 'components/form-quick-search';
 @import 'components/form-subscription';
 @import 'components/card';
+@import 'components/button';
