--- a/src/assets/styles/base/_variables.scss
+++ b/src/assets/styles/base/_variables.scss
@@ -41,3 +41,4 @@ $secondary-border-color: #e7e8f4;
 
 $primary-shadow-color: rgba(0, 0, 0, 0.2);
 $secondary-shadow-color: rgba(82, 63, 105, 0.05);
+$tertiary-shadow-color: rgba(0, 0, 0, 0.02);
