--- a/src/assets/styles/components/_content.scss
+++ b/src/assets/styles/components/_content.scss
@@ -1,9 +1,18 @@
+[class^="app-content-block-"] {
+  margin: 0 0.5rem;
+  padding: 0.5rem;
+  position: relative;
+}
+
 .app-content {
   grid-area: 3 / 1 / 14 / -1;
-  background-color: $primary-background;
+  background-color: $secondary-background;
+  box-shadow: 0 2px 15px 0 $tertiary-shadow-color;
+  position: relative;
 
   &-block-1 {
     grid-area: 3 / 1 / 4 / 2;
+    
   }
 
   &-block-2 {
@@ -44,6 +53,7 @@
 
   &-block-11 {
     grid-area: 13 / 1 / 14 / 2;
+    margin-bottom: 0.5rem;
   }
 
   @media (min-width: $breakpoint-small) {
@@ -52,10 +62,12 @@
 
       &-block-1 {
         grid-area: 3 / 1 / 4 / 2;
+        margin-right: 0;
       }
       
       &-block-2 {
         grid-area: 3 / 2 / 4 / -1;
+        margin-left: 0;
       }
       
       &-block-3 {
@@ -64,10 +76,12 @@
       
       &-block-4 {
         grid-area: 6 / 2 / 7 / -1;
+        margin-left: 0;
       }
       
       &-block-5 {
         grid-area: 7 / 2 / 8 / -1;
+        margin-left: 0;
       }
       
       &-block-6 {
@@ -76,14 +90,17 @@
       
       &-block-7 {
         grid-area: 8 / 1 / 9 / 2;
+        margin-right: 0;
       }
       
       &-block-8 {
         grid-area: 8 / 2 / 9 / -1;
+        margin-left: 0;
       }
       
       &-block-9 {
         grid-area: 6 / 1 / 8 / 2;
+        margin-right: 0;
       }
       
       &-block-10 {
@@ -96,9 +113,21 @@
     }
   }
 
-  @media (min-width: $breakpoint-medium) {
+  @media (min-width: $breakpoint-medium + 1) {
     & {
       grid-area: 4 / 2 / 12 / 4;
+
+      &:after {
+        content: '';
+        width: 100%;
+        height: 50px;
+        position: absolute;
+        bottom: -50px;
+        left: 0;
+        background-color: $secondary-background;
+        box-shadow: 0 2px 15px 0 $tertiary-shadow-color;
+        border-radius: 0 0 0.5rem 0.5rem;
+      }
 
       &-block-1 {
         grid-area: 4 / 2 / 5 / 3;
@@ -118,8 +147,6 @@
     
       &-block-5 {
         grid-area: 8 / 3 / 9 / 4;
-
-        // grid-area: 7 / 2 / 9 / 3;
       }
     
       &-block-6 {
@@ -128,14 +155,10 @@
     
       &-block-7 {
         grid-area: 9 / 2 / 10 / 3;
-
-        // grid-area: 8 / 3 / 9 / 4;
       }
     
       &-block-8 {
         grid-area: 9 / 3 / 10 / 4;
-
-        // grid-area: 9 / 2 / 10 / 3;
       }
     
       &-block-9 {
@@ -162,22 +185,29 @@
       
       &-block-2 {
         grid-area: 4 / 3 / 5 / 4;
+        margin-right: 0;
       }
     
       &-block-3 {
         grid-area: 4 / 4 / 5 / 5;
+        margin-left: 0;
       }
     
       &-block-4 {
         grid-area: 5 / 2 / 6 / 3;
+        margin-left: 0.5rem;
+        margin-right: 0;
       }
     
       &-block-5 {
         grid-area: 6 / 2 / 7 / 3;
+        margin-left: 0.5rem;
+        margin-right: 0;
       }
     
       &-block-6 {
         grid-area: 5 / 3 / 7 / 5;
+        margin-left: 0;
       }
     
       &-block-7 {
@@ -186,23 +216,25 @@
     
       &-block-8 {
         grid-area: 7 / 3 / 8 / 4;
+        margin-right: 0;
       }
     
       &-block-9 {
         grid-area: 7 / 4 / 8 / 5;
+        margin-left: 0;
+        margin-right: 0.5rem;
       }
     
       &-block-10 {
         grid-area: 9 / 2 / 10 / 3;
+        margin-right: 0;
+        margin-bottom: 0.5rem;
       }
     
       &-block-11 {
         grid-area: 9 / 3 / 10 / 5;
+        margin-left: 0;
       }
     }
   }
-}
-
-[class^="app-content-block-"] {
-  padding: 0.5rem;
 }
