--- a/src/assets/styles/components/_header.scss
+++ b/src/assets/styles/components/_header.scss
@@ -63,12 +63,23 @@
     display: flex;
     justify-content: flex-end;
     align-items: center;
+
+    button {
+      width: 40px;
+      height: 40px;
+      color: $primary-color;
+      font-size: 1.25rem;
+    }
   }
 
-  @media (min-width: $breakpoint-medium) {
+  @media (min-width: $breakpoint-medium + 1) {
     & {
       grid-area: 1 / 2 / 2 / 4;
       background: none;
+
+      &__brand {
+        font-size: 2.5rem;
+      }
     }
   }
 
