--- a/src/assets/styles/components/_nav.scss
+++ b/src/assets/styles/components/_nav.scss
@@ -1,46 +1,86 @@
 .app-nav {
-  width: 275px;
   grid-area: 1 / 1 / -1 / -1;
+  width: 275px;
+  min-height: 100vh;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 1;
   background-color: $primary-base;
-  display: none;
+  box-shadow: 0 1px 9px -3px rgba(0, 0, 0, 0.75);
+  transform: translateX(-100%);
+  transition: transform 0.5s ease-in-out;
+
+  &.is-visible {
+    transform: translateX(0);
+  }
 
   &__menu {
     display: flex;
+    flex-direction: column;
     justify-content: flex-start;
-    align-items: stretch;
-    flex-wrap: wrap;
-    margin: 0;
+    align-items: flex-start;
+    margin: 0 0 1rem 0;
     padding: 0;
     list-style-type: none;
     font-size: 0.875rem;
 
     &-item {
-      padding: 0 0.5rem;
+      width: 100%;
+      display: flex;
     }
 
     a {
-      padding: 0.625rem;
+      width: 100%;
+      padding: 1rem;
       color: $secondary-fade-color;
-      border-radius: 0.5rem;
       text-decoration: none;
+      transition: all 0.5s ease-in-out;
+
+      &:hover,
+      &.is-active {
+        color: $primary-color;
+        background-color: $quarternary-background;
+      }
     }
   }
 
-  @media (min-width: $breakpoint-medium) {
-    & {
-      width: 100%;
-      grid-area: 2 / 2 / 3 / 4;
-    }
+  &__toolbar {
+    padding: 0 1rem;
   }
 
   @media (min-width: $breakpoint-medium +1) {
     & {
+      grid-area: 2 / 2 / 3 / 4;
       display: flex;
       justify-content: space-between;
       align-items: center;
+      position: relative;
+      width: 100%;
       height: 70px;
+      min-height: unset;
       padding: 0 1rem;
       border-radius: 0.5rem 0.5rem 0 0;
+      box-shadow: none;
+      transform: translateX(0);
+
+      &__menu {
+        flex-direction: row;
+        align-items: stretch;
+        flex-wrap: wrap;
+        margin: 0;
+
+        &-item {
+          width: unset;
+          padding: 0 0.5rem;
+        }
+        
+        a {
+          padding: 0.625rem;
+          border-radius: 0.5rem;
+        }
+      }
     }
   }
 
